fix [camel-quarkus-examples] HealthTest failure on camel-quarkus-main… (#37)
* fix [camel-quarkus-examples] HealthTest failure on camel-quarkus-main branch #2711

(cherry picked from commit 4308acbf1aabedc5a416ed505abde7ca6cd53955)

* Upgrade to Quarkus 2.0.0.CR2

* fix up observability example #2711

Co-authored-by: Peter Palaga <ppalaga@redhat.com>

--- a/timer-log-kotlin/pom.xml
+++ b/timer-log-kotlin/pom.xml
@@ -29,7 +29,7 @@
 
     <properties>
         <camel-quarkus.version>2.0.0</camel-quarkus.version>
-        <quarkus.version>2.0.0.Alpha3</quarkus.version>
+        <quarkus.version>2.0.0.CR2</quarkus.version>
         <kotlin.version>1.4.32</kotlin.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
