--- a/timer-log-cdi/pom.xml
+++ b/timer-log-cdi/pom.xml
@@ -22,14 +22,14 @@
 
     <artifactId>camel-quarkus-examples-timer-log-cdi</artifactId>
     <groupId>org.apache.camel.quarkus.examples</groupId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.1.0-SNAPSHOT</version>
 
     <name>Camel Quarkus :: Examples :: Timer Log CDI</name>
     <description>Camel Quarkus Example :: Timer to Log CDI</description>
 
     <properties>
-        <camel-quarkus.version>2.0.0-SNAPSHOT</camel-quarkus.version>
-        <quarkus.version>2.0.0.CR3</quarkus.version>
+        <camel-quarkus.version>2.1.0-SNAPSHOT</camel-quarkus.version>
+        <quarkus.version>2.0.0.Final</quarkus.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
