--- a/timer-log-cdi/pom.xml
+++ b/timer-log-cdi/pom.xml
@@ -28,7 +28,7 @@
     <description>Camel Quarkus Example :: Timer to Log CDI</description>
 
     <properties>
-        <camel-quarkus.version>2.0.0</camel-quarkus.version>
+        <camel-quarkus.version>2.1.0-SNAPSHOT</camel-quarkus.version>
         <quarkus.version>2.0.0.Final</quarkus.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
