--- a/timer-log-kotlin/pom.xml
+++ b/timer-log-kotlin/pom.xml
@@ -28,7 +28,7 @@
     <description>Camel Quarkus Example :: Timer to Log Kotlin</description>
 
     <properties>
-        <camel-quarkus.version>2.0.0</camel-quarkus.version>
+        <camel-quarkus.version>2.1.0-SNAPSHOT</camel-quarkus.version>
         <quarkus.version>2.0.0.Final</quarkus.version>
         <kotlin.version>1.4.32</kotlin.version>
 
