--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -45,7 +45,6 @@
         <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
         <mycila-license.version>3.0</mycila-license.version>
-        <strimzi.testcontainers.version>0.20.1</strimzi.testcontainers.version>
         <kafka-oauth-client.version>0.7.2</kafka-oauth-client.version>
     </properties>
 
@@ -104,6 +103,11 @@
             <artifactId>quarkus-kubernetes-config</artifactId>
         </dependency>
 
+        <!-- For oauth use case -->
+        <dependency>
+            <groupId>io.strimzi</groupId>
+            <artifactId>kafka-oauth-client</artifactId>
+        </dependency>
 
         <!-- Test -->
         <dependency>
@@ -124,12 +128,6 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.strimzi</groupId>
-            <artifactId>test-container</artifactId>
-            <version>${strimzi.testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -308,7 +306,6 @@
         <profile>
             <id>kubernetes</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
                 <property>
                     <name>kubernetes</name>
                 </property>
@@ -327,7 +324,6 @@
         <profile>
             <id>openshift</id>
             <activation>
-                <activeByDefault>false</activeByDefault>
                 <property>
                     <name>openshift</name>
                 </property>
@@ -340,21 +336,6 @@
                 <dependency>
                     <groupId>io.quarkus</groupId>
                     <artifactId>quarkus-container-image-openshift</artifactId>
-                </dependency>
-            </dependencies>
-        </profile>
-        <profile>
-            <id>oauth2</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-                <property>
-                    <name>oauth2</name>
-                </property>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>io.strimzi</groupId>
-                    <artifactId>kafka-oauth-client</artifactId>
                 </dependency>
             </dependencies>
         </profile>
