--- a/kafka/src/main/resources/application.properties
+++ b/kafka/src/main/resources/application.properties
@@ -42,26 +42,24 @@ timer.delay = 10000
 #camel.component.kafka.additional-properties[sasl.login.callback.handler.class] = io.strimzi.kafka.oauth.client.JaasClientOauthLoginCallbackHandler
 
 
-###########################################
-# Both Kubernetes and Openshift deployment
-###########################################
-# secrets section
-%prod.quarkus.kubernetes-config.enabled=true
-#getting secrets while deploying to kubernetes
-%prod.quarkus.kubernetes-config.namespace=test
-%prod.quarkus.kubernetes-config.secrets.enabled=true
-%prod.quarkus.kubernetes-config.secrets=camel-kafka
-# Uncomment to trust self signed certificates if they are presented by the Kubernetes API server
-quarkus.kubernetes-client.trust-certs=true
-
 ###################################
 # Kubernetes specific
 ###################################
+# secrets
+#quarkus.kubernetes-config.enabled=true
+#getting secrets while deploying to kubernetes
+#quarkus.kubernetes-config.namespace=test
+#quarkus.kubernetes-config.secrets.enabled=true
+#quarkus.kubernetes-config.secrets=camel-kafka
+
 # creating container with jib
 #quarkus.container-image.build=true
 #quarkus.kubernetes.deployment-target=kubernetes
 #quarkus.container-image.group=<YOUR_IMAGE_GROUP>
 #quarkus.container-image.registry=<YOUR_REGISTRY_URL>
+
+# Uncomment to trust self signed certificates if they are presented by the Kubernetes API server
+#quarkus.kubernetes-client.trust-certs=true
 
 # Uncomment to set resource limits
 #quarkus.kubernetes.resources.requests.memory=64Mi
@@ -72,9 +70,19 @@ quarkus.kubernetes-client.trust-certs=true
 ###################################
 # OpenShift specific
 ###################################
+# secrets
+#quarkus.kubernetes-config.enabled=true
+#getting secrets while deploying to kubernetes
+#quarkus.kubernetes-config.namespace=test
+#quarkus.kubernetes-config.secrets.enabled=true
+#quarkus.kubernetes-config.secrets=camel-kafka
+
 # creating container for openshift
 #quarkus.container-image.build=true
 #quarkus.kubernetes.deployment-target=openshift
+
+# OpenShift
+#quarkus.openshift.image-pull-policy=IfNotPresent
 
 # Uncomment to set resource limits
 #quarkus.openshift.resources.requests.memory=64Mi
