fix oAuth bearer and set openshift container for openshift deployment (#47)
* fix oAuth bearer and set openshift container for openshift deployment
fixes #2872

* Update kafka/README.adoc

Co-authored-by: Peter Palaga <ppalaga@redhat.com>

* Update kafka/README.adoc

Co-authored-by: Peter Palaga <ppalaga@redhat.com>

* Update kafka/README.adoc

Co-authored-by: Peter Palaga <ppalaga@redhat.com>

* Update kafka/README.adoc

Co-authored-by: Peter Palaga <ppalaga@redhat.com>

* remove oAuth2 + Strimzi testcontainers already managed by dev services

Co-authored-by: Peter Palaga <ppalaga@redhat.com>

--- a/kafka/src/main/resources/application.properties
+++ b/kafka/src/main/resources/application.properties
@@ -23,31 +23,43 @@ timer.period = 10000
 timer.delay = 10000
 
 #uncomment to set Kafka instance without Authentication
-#camel.component.kafka.brokers=<YOUR-KAFKA-BOOTSTRAP-URL-HERE>
+#camel.component.kafka.brokers=${brokers}
 
 # uncomment to set Kafka instance with SASL Plain
-#camel.component.kafka.brokers=<YOUR-KAFKA-BOOTSTRAP-URL-HERE>
+#camel.component.kafka.brokers=${brokers}
 #camel.component.kafka.security-protocol=SASL_SSL
 #camel.component.kafka.sasl-mechanism=PLAIN
-#camel.component.kafka.sasl-jaas-config=org.apache.kafka.common.security.plain.PlainLoginModule required username="<YOUR-SERVICE-ACCOUNT-ID-HERE>" password="<YOUR-SERVICE-ACCOUNT-SECRET-HERE>";
+#camel.component.kafka.sasl-jaas-config=org.apache.kafka.common.security.plain.PlainLoginModule required username="${id}" password="${secret}";
 
 # uncomment to set Kafka instance with SASL Oauth Bearer
-#camel.component.kafka.brokers = <YOUR-KAFKA-BOOTSTRAP-URL-HERE>
+#camel.component.kafka.brokers = ${brokers}
 #camel.component.kafka.security-protocol = SASL_SSL
 #camel.component.kafka.sasl-mechanism = OAUTHBEARER
 #camel.component.kafka.sasl-jaas-config = org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule required \
-#        oauth.client.id=<YOUR-SERVICE-ACCOUNT-ID-HERE> \
-#        oauth.client.secret=<YOUR-SERVICE-ACCOUNT-SECRET-HERE> \
-#        oauth.token.endpoint.uri="<TOKEN_ENDPOINT_URI>" ;
+#        oauth.client.id="${id}" \
+#        oauth.client.secret="${secret}" \
+#        oauth.token.endpoint.uri="${token}" ;
 #camel.component.kafka.additional-properties[sasl.login.callback.handler.class] = io.strimzi.kafka.oauth.client.JaasClientOauthLoginCallbackHandler
 
 
-# Kubernetes
+###################################
+# Kubernetes specific
+###################################
+# secrets
+#quarkus.kubernetes-config.enabled=true
+#getting secrets while deploying to kubernetes
+#quarkus.kubernetes-config.namespace=test
+#quarkus.kubernetes-config.secrets.enabled=true
+#quarkus.kubernetes-config.secrets=camel-kafka
+
+# creating container with jib
+#quarkus.container-image.build=true
+#quarkus.kubernetes.deployment-target=kubernetes
+#quarkus.container-image.group=<YOUR_IMAGE_GROUP>
+#quarkus.container-image.registry=<YOUR_REGISTRY_URL>
 
 # Uncomment to trust self signed certificates if they are presented by the Kubernetes API server
 #quarkus.kubernetes-client.trust-certs=true
-
-quarkus.kubernetes.image-pull-policy=IfNotPresent
 
 # Uncomment to set resource limits
 #quarkus.kubernetes.resources.requests.memory=64Mi
@@ -55,20 +67,25 @@ quarkus.kubernetes.image-pull-policy=IfNotPresent
 #quarkus.kubernetes.resources.limits.memory=512Mi
 #quarkus.kubernetes.resources.limits.cpu=1000m
 
-# OpenShift
-quarkus.openshift.image-pull-policy=IfNotPresent
+###################################
+# OpenShift specific
+###################################
+# secrets
+#quarkus.kubernetes-config.enabled=true
+#getting secrets while deploying to kubernetes
+#quarkus.kubernetes-config.namespace=test
+#quarkus.kubernetes-config.secrets.enabled=true
+#quarkus.kubernetes-config.secrets=camel-kafka
 
+# creating container for openshift
+#quarkus.container-image.build=true
+#quarkus.kubernetes.deployment-target=openshift
+
+# OpenShift
+#quarkus.openshift.image-pull-policy=IfNotPresent
 
 # Uncomment to set resource limits
 #quarkus.openshift.resources.requests.memory=64Mi
 #quarkus.openshift.resources.requests.cpu=250m
 #quarkus.openshift.resources.limits.memory=512Mi
 #quarkus.openshift.resources.limits.cpu=1000m
-
-
-#uncomment to set container build
-#quarkus.container-image.builder=docker
-#quarkus.kubernetes.deployment-target=kubernetes
-#quarkus.container-image.push=true
-#quarkus.container-image.group=<YOUR_IMAGE_GROUP>
-
