--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -45,7 +45,7 @@
         <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
         <mycila-license.version>3.0</mycila-license.version>
-        <strimzi.testcontainers.version>0.20.1</strimzi.testcontainers.version>
+        <kafka-oauth-client.version>0.7.2</kafka-oauth-client.version>
     </properties>
 
     <dependencyManagement>
@@ -64,6 +64,11 @@
                 <version>${camel-quarkus.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.strimzi</groupId>
+                <artifactId>kafka-oauth-client</artifactId>
+                <version>${kafka-oauth-client.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -95,11 +100,13 @@
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-kubernetes</artifactId>
+            <artifactId>quarkus-kubernetes-config</artifactId>
         </dependency>
+
+        <!-- For oauth use case -->
         <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-container-image-docker</artifactId>
+            <groupId>io.strimzi</groupId>
+            <artifactId>kafka-oauth-client</artifactId>
         </dependency>
 
         <!-- Test -->
@@ -121,12 +128,6 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.strimzi</groupId>
-            <artifactId>test-container</artifactId>
-            <version>${strimzi.testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -305,7 +306,6 @@
         <profile>
             <id>kubernetes</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
                 <property>
                     <name>kubernetes</name>
                 </property>
@@ -314,6 +314,10 @@
                 <dependency>
                     <groupId>io.quarkus</groupId>
                     <artifactId>quarkus-kubernetes</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>io.quarkus</groupId>
+                    <artifactId>quarkus-container-image-jib</artifactId>
                 </dependency>
             </dependencies>
         </profile>
@@ -328,6 +332,10 @@
                 <dependency>
                     <groupId>io.quarkus</groupId>
                     <artifactId>quarkus-openshift</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>io.quarkus</groupId>
+                    <artifactId>quarkus-container-image-openshift</artifactId>
                 </dependency>
             </dependencies>
         </profile>
