--- a/rest-json/pom.xml
+++ b/rest-json/pom.xml
@@ -22,13 +22,13 @@
 
     <artifactId>camel-quarkus-examples-rest-json</artifactId>
     <groupId>org.apache.camel.quarkus.examples</groupId>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.2.0-SNAPSHOT</version>
 
     <name>Camel Quarkus :: Examples :: Rest Json</name>
     <description>Camel Quarkus Example :: Rest Json</description>
 
     <properties>
-        <camel-quarkus.version>2.1.0-SNAPSHOT</camel-quarkus.version>
+        <camel-quarkus.version>2.1.0</camel-quarkus.version>
         <quarkus.version>2.1.0.Final</quarkus.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
