--- a/aws-lambda/pom.xml
+++ b/aws-lambda/pom.xml
@@ -203,7 +203,7 @@
 
     <plugins>
       <plugin>
-        <groupId>io.quarkus.platform</groupId>
+        <groupId>io.quarkus</groupId>
         <artifactId>quarkus-maven-plugin</artifactId>
         <version>${quarkus.version}</version>
         <extensions>true</extensions>
