Fix aws-lambda license check issues and shrink example

--- a/aws-lambda/pom.xml
+++ b/aws-lambda/pom.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0"?>
 <!--
+
     Licensed to the Apache Software Foundation (ASF) under one or more
     contributor license agreements.  See the NOTICE file distributed with
     this work for additional information regarding copyright ownership.
     The ASF licenses this file to You under the Apache License, Version 2.0
     (the "License"); you may not use this file except in compliance with
     the License.  You may obtain a copy of the License at
+
          http://www.apache.org/licenses/LICENSE-2.0
+
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
+
 -->
 
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
@@ -191,8 +195,10 @@
             <mapping>
               <java>SLASHSTAR_STYLE</java>
               <properties>CAMEL_PROPERTIES_STYLE</properties>
-              <kt>SLASHSTAR_STYLE</kt>
-            </mapping>
+              <Dockerfile.jvm>CAMEL_PROPERTIES_STYLE</Dockerfile.jvm>
+              <Dockerfile.native>CAMEL_PROPERTIES_STYLE</Dockerfile.native>
+              <Dockerfile.native-distroless>CAMEL_PROPERTIES_STYLE</Dockerfile.native-distroless>
+              </mapping>
             <headerDefinitions>
               <headerDefinition>${maven.multiModuleProjectDirectory}/license-properties-headerdefinition.xml</headerDefinition>
             </headerDefinitions>
@@ -205,7 +211,6 @@
       <plugin>
         <groupId>io.quarkus</groupId>
         <artifactId>quarkus-maven-plugin</artifactId>
-        <version>${quarkus.version}</version>
         <extensions>true</extensions>
         <executions>
           <execution>
