--- a/timer-log-kotlin/pom.xml
+++ b/timer-log-kotlin/pom.xml
@@ -28,8 +28,8 @@
     <description>Camel Quarkus Example :: Timer to Log Kotlin</description>
 
     <properties>
-        <camel-quarkus.version>2.1.0-SNAPSHOT</camel-quarkus.version>
-        <quarkus.version>2.1.0.Final</quarkus.version>
+        <camel-quarkus.version>2.2.0</camel-quarkus.version>
+        <quarkus.version>2.2.0.Final</quarkus.version>
         <kotlin.version>1.5.21</kotlin.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
