Removing JPA and fixing docs

--- a/jdbc-datasource/src/main/resources/application.properties
+++ b/jdbc-datasource/src/main/resources/application.properties
@@ -22,16 +22,14 @@ quarkus.log.file.enable = true
 
 camel.main.routes-include-pattern = file:src/main/resources/routes/camel-routes.xml
 
-#Create table automatically on database
-quarkus.hibernate-orm.database.generation=drop-and-create
 
 #Default datastore
-quarkus.datasource.db-kind=h2
+quarkus.datasource.camel-ds.db-kind=h2
 
 #If you want to have more than one datastore, you can use an identifier as this:
-#quarkus.datasource.camel-ds.db-kind=h2
+#quarkus.datasource.$identifier.db-kind=h2
 #Then use it on the route by name
-#<to uri="jdbc:camel-ds"/>
+#<to uri="jdbc:$identifier"/>
 
 #Configure the following section to use a maven profile (called prod)
 #configured database (using postgresql on this case)
