--- a/jdbc-datasource/pom.xml
+++ b/jdbc-datasource/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.camel.quarkus.examples</groupId>
   <artifactId>camel-quarkus-examples-jdbc-datasource</artifactId>
-  <version>2.2.0</version>
+  <version>2.3.0-SNAPSHOT</version>
   <name>Camel Quarkus :: Examples :: Jdbc - DatataSource - Log</name>
   <description>Camel Quarkus Example :: Connect to Database using Datasource</description>
   <properties>
@@ -45,10 +45,6 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.camel.quarkus</groupId>
-      <artifactId>camel-quarkus-microprofile-health</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.camel.quarkus</groupId>
       <artifactId>camel-quarkus-xml-io-dsl</artifactId>
     </dependency>
     <dependency>
@@ -66,10 +62,6 @@
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-jdbc-h2</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.camel.quarkus</groupId>
-      <artifactId>camel-quarkus-jpa</artifactId>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
