--- a/jdbc-datasource/pom.xml
+++ b/jdbc-datasource/pom.xml
@@ -63,6 +63,10 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.camel.quarkus</groupId>
+      <artifactId>camel-quarkus-microprofile-health</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel.quarkus</groupId>
       <artifactId>camel-quarkus-xml-io-dsl</artifactId>
     </dependency>
     <dependency>
