--- a/kafka/src/main/resources/application.properties
+++ b/kafka/src/main/resources/application.properties
@@ -23,8 +23,7 @@ timer.period = 10000
 timer.delay = 10000
 
 # Kafka instance without Authentication
-# Passing ${kafka.bootstrap.servers} is a workaround for https://github.com/apache/camel-quarkus/issues/2939
-camel.component.kafka.brokers=${brokers:${kafka.bootstrap.servers}}
+#camel.component.kafka.brokers=${brokers}
 
 # uncomment to set Kafka instance with SASL Plain
 #camel.component.kafka.brokers=${brokers}
