--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -57,9 +57,10 @@ jobs:
       matrix: ${{ steps.set-itest-matrix.outputs.matrix }}
     steps:
       - name: Set up JDK 11
-        uses: AdoptOpenJDK/install-jdk@v1
+        uses: actions/setup-java@v2
         with:
-          version: '11'
+          distribution: 'temurin'
+          java-version: '11'
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build Camel Quarkus
@@ -126,9 +127,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Set up JDK 11
-        uses: AdoptOpenJDK/install-jdk@v1
+        uses: actions/setup-java@v2
         with:
-          version: '11'
+          distribution: 'temurin'
+          java-version: '11'
       - name: Download Maven Repo
         uses: actions/download-artifact@v2
         with:
